--- a/package.json
+++ b/package.json
@@ -24,9 +24,11 @@
   "license": "MIT",
   "dependencies": {
     "@prisma/client": "^5.4.2",
+    "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0"
   },
   "devDependencies": {
